--- a/index.html
+++ b/index.html
@@ -173,6 +173,18 @@
                             surprising and</p>
                     </div>
                 </div>
+
+                <div class="card">
+                    <img src="images/portfolio-1.jpg" alt="">
+                    <div class="info">
+                        <h3>Project Here</h3>
+                        <p>My creative ability is very difficult to measure because it can manifest in so many
+                            surprising and</p>
+                    </div>
+                </div>
+
+
+
             </div>
         </div>
     </div>
@@ -186,9 +198,9 @@
             <h2 class="special-heading">About</h2>
             <p>Less is more work</p>
             <div class="about-content">
-                <div class="image">
+                <!-- <div class="image">
                     <img src="images/about.jpg" alt="">
-                </div>
+                </div> -->
                 <div class="text">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil nemo neque voluptate tempora
                         velit cum non, fuga vitae architecto delectus sed maxime rerum impedit aliquam obcaecati,
@@ -197,6 +209,10 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, sapiente. Velit iure
                         exercitationem dolores nesciunt dolore. Eum officiis dolorum hic voluptate quaerat minima,
                         similique inventore esse, alias, sed quo officia?</p>
+                </div>
+
+                <div class="image">
+                    <img src="images/about.jpg" alt="">
                 </div>
             </div>
         </div>
