--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <p>If you do it right, it will last forever.</p>
             <div class="portfolio-content grid-3">
                 <div class="card">
-                    <img src="images/portfolio-1.jpg" alt="">
+                    <img src="Images/23456789123.jpg" alt="">
                     <div class="info">
                         <h3>Project Here</h3>
                         <p>My creative ability is very difficult to measure because it can manifest in so many
@@ -187,7 +187,7 @@
             <p>Less is more work</p>
             <div class="about-content">
                 <div class="image">
-                    <img src="images/about.jpg" alt="">
+                    <img src="images/435678918.jpg" alt="">
                 </div>
                 <div class="text">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil nemo neque voluptate tempora
