--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <p>Less is more work</p>
             <div class="about-content">
                 <div class="image">
-                    <img src="images/24578912.jpg" alt="">
+                    <img src="images/about23456789.jpg" alt="">
                 </div>
                 <div class="text">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil nemo neque voluptate tempora
